# jxl_ex

./: .gitignore  CMakeLists.txt  README.md  mix.exs
cpp_src/: jxl_dec_nif.cpp  jxl_dec_nif.h  jxl_enc_nif.cpp  jxl_enc_nif.h  jxl_nif.cpp  jxl_nif.h
lib/: jxl_ex.ex
lib/jxl_ex/: base.ex  decoder.ex  image.ex  jxl.ex
libjxl/: 01-skcms-directory.patch  CMakeLists.txt
test/: jxl_ex_test.exs
